[package]
name = "extract_myreact"
version = "0.1.0"
edition = "2021"
authors = ["Petruknisme <me@petruknisme.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
zip = "0.6"
colored = "2"